<resources>
    <string name="app_name">NimbleSurvey</string>

    <!--Splash-->
    <string name="splash_background_content_description">Splash Background</string>
    <string name="splash_logo_content_description">Nimble Logo</string>
    <string name="timber_log">Class:%s: Line: %s, Method: %s</string>

    <!--Login-->
    <string name="login_email">Email</string>
    <string name="login_email_text_field">Login Email TextField</string>
    <string name="login_password">Password</string>
    <string name="login_password_text_field">Login Password TextField</string>
    <string name="login_forget">Forgot?</string>
    <string name="login_log_in">Log in</string>
    <string name="login_log_in_button">Log in</string>

    <string name="network_error">Cannot connect to internet</string>
    <string name="protocol_error">Something went wrong!!</string>
    <string name="oops">Oops!!</string>

    <!--Home-->
    <string name="home_user_image">User Image</string>
    <string name="home_survey_detail_button">Home survey detail button</string>
    <string name="home_survey_background_image">Home survey background image</string>
    <string name="home_today">Today</string>
    <string name="home_shimmer">Home shimmer</string>
    <string name="home_dot">Home dots</string>
    <string name="home_survey_content">Home survey content</string>

    <!--Survey-->
    <string name="survey_detail_back_icon">Survey detail back icon</string>
    <string name="survey_detail_close_icon">Survey detail close icon</string>
    <string name="survey_detail_background_image">Survey detail background image</string>
    <string name="survey_detail_start_survey">Start Survey</string>
    <string name="survey_detail_next_question_btn">Next question button</string>

    <!--SurveyQuestion-->
    <string name="survey_question_number">%d/%d</string>
    <string name="survey_question_warning_dialog_title">Warning!</string>
    <string name="survey_question_warning_dialog_message">Are you sure you want to quit the survey?</string>
    <string name="survey_question_warning_dialog_yes">Yes</string>
    <string name="survey_question_warning_dialog_cancel">Cancel</string>
    <string name="survey_question_next_question">Survey next question</string>
    <string name="survey_question_submit_survey">Submit</string>
    <string name="survey_question_thanks">Thanks for taking\nthe survey.</string>
    <string name="survey_question_not_at_all_likely">Not at all Likely</string>
    <string name="survey_question_extremely_likely">Extremely Likely</string>
    <string name="survey_question_your_thoughts">Your thoughts</string>
</resources>
